create github pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="header5 cid-rmkcLP7yzv mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=kF9LJhIY6hU" id="header5-d">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="header5 cid-rmkcLP7yzv mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=kF9LJhIY6hU" id="header5-d">
 
     
 
@@ -67,7 +67,8 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2"><br><br>mouse is<strong> my weapon.</strong></h1>
                 <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style display-7"><strong>I'm a Digital Artist &amp; Graphic Designer</strong><br>ــــــــــــــــــــــــــــــــــــــــ 
-<br>Most of my work is currently classified as portrait (Digital Portrait) .My artwork is a product of work through improvisation with listening to a music track while working on each portrait. Music plays an important role in the production process of portraits  it's represents for me an inspiration and guidance for me during my improvisational and work steps on portraiture,&nbsp;<br>It's a way to enter into a distinctive mode&nbsp;which helps me to achieve an expressive and appropriate visual result from my point of view of the person I am trying to express by improvisation in formulation of his facial features .<br>ــــــــــــــــــــــــــــــــــــــــ <br>
+<br>Most of my work is currently classified as portrait (Digital Portrait) .My artwork is a product of work through improvisation with listening to a music track while working on each portrait.The music is randomly selected,When I listen to music and feel that between it and the face of the person I want to express visually some kind of harmony i start working immediately.
+<br>&nbsp;Music plays an important role in the production process of portraits  it's represents for me an inspiration and guidance for me during my improvisational and work steps on portraiture,It's a way to enter into a distinctive mode&nbsp;which helps me to achieve an expressive and appropriate visual result from my point of view of the person I am trying to express by improvisation in formulation of his facial features .<br>ــــــــــــــــــــــــــــــــــــــــ <br>
 The full version of website is currently being designed.<br></p>
                 
             </div>
