create github pages

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-7" href="https://society6.com/islamallam/collection/untitportrait-eld" target="_blank">shop</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="https://society6.com/islamallam/collection/untitportrait-eld" target="_blank">SHshop</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="https://caramel.la/daftarallam" target="_blank">daftar allam</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-7" href="https://society6.com/islamallam/collection/untitportrait-eld" target="_blank">shop</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="https://caramel.la/daftarallam" target="_blank">daftar allam</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header5 cid-rmkcLP7yzv mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=kF9LJhIY6hU" id="header5-d">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header5 cid-rmkcLP7yzv mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=kF9LJhIY6hU" id="header5-d">
 
     
 
