create github pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header5 cid-rmkcLP7yzv mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=kF9LJhIY6hU" id="header5-d">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="header5 cid-rmkcLP7yzv mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=kF9LJhIY6hU" id="header5-d">
 
     
 
@@ -91,8 +91,7 @@ The full version of website is currently being designed.</em><br></p>
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-5"><strong>Exhibitions and Featured on</strong></h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-4">Exhibitions where I participated and Platforms featured my artworks 
-<div><br></div></h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-4">The Exhibitions where I participated and And The platforms that featured my artwork<div><br></div></h3>
                 
             </div>
         </div>
