create github pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="header5 cid-rmkcLP7yzv mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=kF9LJhIY6hU" id="header5-d">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="header5 cid-rmkcLP7yzv mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=kF9LJhIY6hU" id="header5-d">
 
     
 
@@ -67,11 +67,9 @@
         <div class="row justify-content-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2"><br><br>mouse is<strong> my weapon.</strong></h1>
-                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style display-7">I'm a Digital Artist &amp; Graphic Designer
-<br>ــــــــــــــــــــــــــــــــــــــــ 
-<br>Most of my work is currently classified as portraits (digital portraits). My artwork is a product of improvisation and listening to a music track while working on each piece, the music is randomly selected, when I listen to a piece of music and feel that harmony between it and the character I want to visually express flows, I start working on it immediately. Music plays a major role in the creative process as it represents the inspiration and guidance through the improvisation and creative process; it's a gate to get me into this distinctive mood which helps me reach, from my point of view, the visual result I have about the character who I'm trying to visualize through improvisation and reformulation of their facial features.
-<br>ــــــــــــــــــــــــــــــــــــــــ 
-<br>The full version of website is currently being designed.<br></p>
+                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style display-7"><strong>I'm a Digital Artist &amp; Graphic Designer</strong><br>ــــــــــــــــــــــــــــــــــــــــ 
+<br>Most of my work is currently classified as portraits (Digital Portraits). My artwork is a product of improvisation and listening to a music track while working on each piece, the music is randomly selected, when I listen to a piece of music and feel that harmony between it and the character I want to visually express flows, I start working on it immediately. Music plays a major role in the creative process as it represents the inspiration and guidance through the improvisation and creative process; it's a gate to get me into this distinctive mood which helps me reach, from my point of view,  the visual result I have about the character who I'm trying to visualize through improvisation and reformulation of their facial features.<br>ــــــــــــــــــــــــــــــــــــــــ <br><em>
+The full version of website is currently being designed.</em><br></p>
                 
             </div>
         </div>
